target/generated-sources/antlr4/ArgQLGrammarParser.java
// Generated from ArgQLGrammar.g4 by ANTLR 4.7.2

	import java.util.*;
	import arg.tech.argql.translator.sparql.*;
	import arg.tech.argql.results.*;
	import arg.tech.argql.patterns.*;
	import arg.tech.argql.filters.*;
	import arg.tech.utils.Enums.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ArgQLGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, MATCH=14, PATH=15, RETURN=16, ATTACK=17, 
		REBUT=18, UNDERCUT=19, UNDERMINE=20, SUPPORT=21, ENDORSE=22, BACK=23, 
		VARIABLE=24, EMPTYSET=25, TIMESTAMP=26, AUTHOR=27, SCHEME=28, DOTS=29, 
		TEXT=30, INT=31, WS=32;
	public static final int
		RULE_query = 0, RULE_returnValue = 1, RULE_dialogue_pattern = 2, RULE_argpattern = 3, 
		RULE_premisePattern = 4, RULE_conclusionPattern = 5, RULE_argFilters = 6, 
		RULE_af = 7, RULE_metadata = 8, RULE_premiseFilters = 9, RULE_inclusionFilter = 10, 
		RULE_joinFilter = 11, RULE_propositionSet = 12, RULE_pathpattern = 13, 
		RULE_pp = 14, RULE_relation = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "returnValue", "dialogue_pattern", "argpattern", "premisePattern", 
			"conclusionPattern", "argFilters", "af", "metadata", "premiseFilters", 
			"inclusionFilter", "joinFilter", "propositionSet", "pathpattern", "pp", 
			"relation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'('", "')'", "'<'", "'>'", "'['", "']'", "'/'", "'.'", 
			"'{'", "'}'", "'*'", "'+'", null, null, null, null, null, null, null, 
			null, null, null, null, "'_'", null, null, null, "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "MATCH", "PATH", "RETURN", "ATTACK", "REBUT", "UNDERCUT", 
			"UNDERMINE", "SUPPORT", "ENDORSE", "BACK", "VARIABLE", "EMPTYSET", "TIMESTAMP", 
			"AUTHOR", "SCHEME", "DOTS", "TEXT", "INT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ArgQLGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		/*StringBuilder sparqlBuilder = new StringBuilder();
		String rdfPrefix = "rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#>";
		String aifPrefix = "aif:<http://www.arg.dundee.ac.uk/aif#>";*/

	public ArgQLGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class QueryContext extends ParserRuleContext {
		public boolean optimized;
		public String sparqlQuery;
		public Dialogue_patternContext dialogue_pattern;
		public TerminalNode MATCH() { return getToken(ArgQLGrammarParser.MATCH, 0); }
		public List<Dialogue_patternContext> dialogue_pattern() {
			return getRuleContexts(Dialogue_patternContext.class);
		}
		public Dialogue_patternContext dialogue_pattern(int i) {
			return getRuleContext(Dialogue_patternContext.class,i);
		}
		public TerminalNode RETURN() { return getToken(ArgQLGrammarParser.RETURN, 0); }
		public List<ReturnValueContext> returnValue() {
			return getRuleContexts(ReturnValueContext.class);
		}
		public ReturnValueContext returnValue(int i) {
			return getRuleContext(ReturnValueContext.class,i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public QueryContext(ParserRuleContext parent, int invokingState, boolean optimized) {
			super(parent, invokingState);
			this.optimized = optimized;
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLGrammarListener ) ((ArgQLGrammarListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLGrammarListener ) ((ArgQLGrammarListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query(boolean optimized) throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState(), optimized);
		enterRule(_localctx, 0, RULE_query);
		((QueryContext)_localctx).sparqlQuery =  "";
				SPARQLTranslator.initialize(optimized);
			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(MATCH);
			{
			setState(33);
			((QueryContext)_localctx).dialogue_pattern = dialogue_pattern();

			 			DialoguePattern dp = ((QueryContext)_localctx).dialogue_pattern.value;
			 			SPARQLTranslator.addDialoguePattern(dp);
			 		
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(35);
				match(T__0);
				setState(36);
				((QueryContext)_localctx).dialogue_pattern = dialogue_pattern();

				 				DialoguePattern dp1 = ((QueryContext)_localctx).dialogue_pattern.value;
				 				SPARQLTranslator.addDialoguePattern(dp1);
				 			
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(44);
				match(RETURN);
				setState(45);
				returnValue();
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(46);
					match(T__0);
					setState(47);
					returnValue();
					}
					}
					setState(52);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
			_ctx.stop = _input.LT(-1);

				//	SPARQLTranslator.terminate();
					((QueryContext)_localctx).sparqlQuery =  SPARQLTranslator.generateSPARQLQuery(optimized);
					
				
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnValueContext extends ParserRuleContext {
		public Token VARIABLE;
		public List<TerminalNode> VARIABLE() { return getTokens(ArgQLGrammarParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ArgQLGrammarParser.VARIABLE, i);
		}
		public TerminalNode PATH() { return getToken(ArgQLGrammarParser.PATH, 0); }
		public ReturnValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLGrammarListener ) ((ArgQLGrammarListener)listener).enterReturnValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLGrammarListener ) ((ArgQLGrammarListener)listener).exitReturnValue(this);
		}
	}

	public final ReturnValueContext returnValue() throws RecognitionException {
		ReturnValueContext _localctx = new ReturnValueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_returnValue);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				((ReturnValueContext)_localctx).VARIABLE = match(VARIABLE);

							SPARQLTranslator.addVarReturnvalue((((ReturnValueContext)_localctx).VARIABLE!=null?((ReturnValueContext)_localctx).VARIABLE.getText():null));
						
				}
				break;
			case PATH:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(PATH);
				String var1, var2; 
				setState(59);
				match(T__1);
				setState(60);
				((ReturnValueContext)_localctx).VARIABLE = match(VARIABLE);
				 var1 = (((ReturnValueContext)_localctx).VARIABLE!=null?((ReturnValueContext)_localctx).VARIABLE.getText():null);
				setState(62);
				match(T__0);
				setState(63);
				((ReturnValueContext)_localctx).VARIABLE = match(VARIABLE);
				 var2 = (((ReturnValueContext)_localctx).VARIABLE!=null?((ReturnValueContext)_localctx).VARIABLE.getText():null); 
				setState(65);
				match(T__2);

							SPARQLTranslator.addPathReturnValue(var1, var2); 
						  
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dialogue_patternContext extends ParserRuleContext {
		public DialoguePattern value;
		public ArgpatternContext argpattern;
		public PathpatternContext pathpattern;
		public List<ArgpatternContext> argpattern() {
			return getRuleContexts(ArgpatternContext.class);
		}
		public ArgpatternContext argpattern(int i) {
			return getRuleContext(ArgpatternContext.class,i);
		}
		public List<PathpatternContext> pathpattern() {
			return getRuleContexts(PathpatternContext.class);
		}
		public PathpatternContext pathpattern(int i) {
			return getRuleContext(PathpatternContext.class,i);
		}
		public Dialogue_patternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dialogue_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLGrammarListener ) ((ArgQLGrammarListener)listener).enterDialogue_pattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLGrammarListener ) ((ArgQLGrammarListener)listener).exitDialogue_pattern(this);
		}
	}

	public final Dialogue_patternContext dialogue_pattern() throws RecognitionException {
		Dialogue_patternContext _localctx = new Dialogue_patternContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dialogue_pattern);

			ArgPattern ap1;
			PathPatternCollection pathcollection = new PathPatternCollection();
		 	PathPatternCollection newPathCollection = new PathPatternCollection();
		 	

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			((Dialogue_patternContext)_localctx).argpattern = argpattern();

						ap1 = ((Dialogue_patternContext)_localctx).argpattern.value;
					
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << ATTACK) | (1L << REBUT) | (1L << UNDERCUT) | (1L << UNDERMINE) | (1L << SUPPORT) | (1L << ENDORSE) | (1L << BACK))) != 0)) {
				{
				{
				setState(71);
				((Dialogue_patternContext)_localctx).pathpattern = pathpattern();

								//System.out.println("Paths: ");
								//System.out.println(((Dialogue_patternContext)_localctx).pathpattern.value.toString());
								newPathCollection = ((Dialogue_patternContext)_localctx).pathpattern.value;
							
				setState(73);
				((Dialogue_patternContext)_localctx).argpattern = argpattern();

								ArgPattern ap2 = ((Dialogue_patternContext)_localctx).argpattern.value;
								newPathCollection.updateFirst(ap1);
								newPathCollection.updateLast(ap2);
								
												
							    pathcollection = PathPatternCollection.merge(pathcollection, newPathCollection);
							//	sparqlBuilder.append(ap2.getSparqlRepresentation());
										
								
							/* 				
								for(int j=0; j < pathcollection.getPathSet().size(); j++){
									PathPattern path = (PathPattern) pathcollection.getPathSet().get(j);
									
									if((j + 1) < pathcollection.getPathSet().size())
										sparqlBuilder.append("{\n");
								
									
									for(int i=0; i < path.getRelSequence().size(); i++) {
										RelationPattern relPattern = path.getRelSequence().get(i);
										
										if(i!=path.getRelSequence().size()-1)
										{
											sparqlBuilder.append(relPattern.getAp2().getSparqlRepresentation());
										}
											
										sparqlBuilder.append(relPattern.getSparqlRepresentation());
									}
									 
									
									if((j + 1) < pathcollection.getPathSet().size()){
										sparqlBuilder.append("}\n");	
										sparqlBuilder.append("UNION\n");
									}
								}
								 
								if(pathcollection != null){
						 			System.out.println(pathcollection.toString());  
						 		}*/
								ap1 = ap2;
								
							
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
